main.css
:root {
	color-scheme: light dark;
	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

h1, h2, h3, p {
	text-align: center;
}

h1 {
	font-size: 3rem;
}

h2 {
	font-size: 2rem;
}

h3 {
	font-size: 1.75rem;
}

li, p {
	font-size: 1.25rem;
}

.contact {
	grid-gap: .4rem;
	display: grid;
	margin: 1em 0;
}

.contact-link {
	font-size: 2.25rem;
	text-decoration: none;
	color: black;
}

.contact-link svg {
	padding-right: .3rem;
}

a:focus-visible {
	outline: 4px solid black;
}

.avatar {
	display: block;
	margin: 1em auto;
	max-width: 15em;
	height: auto;
	object-fit: scale-down;
}

/* Fit entire avatar on really small screens */
@media (max-width: 600px) {
	img {
	  width: 100%;
	}
}

.contact {
	display: flex;
	justify-content: center;
	flex-wrap: wrap;
}

@media (prefers-color-scheme: dark) {
	:root {
		background: #1e1e1e;
		color: white;
	}

	.matrix,
	.github {
	fill: white;
}
	a {
		color: #ffcb00;
	}
	
	a:focus-visible {
		outline: 4px solid white;
}
}

